--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -456,34 +456,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lower is better (MSE)\n",
-      "our method:  597.814453125\n",
-      "Base line:  1019.4821166992188\n",
-      "Higher is better (PSNR)\n",
-      "our method:  20.365140914916992\n",
-      "Base line:  18.047008514404297\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'output/synthesized<built-in function iter>/FAIS_result.png'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/nasseraa/inversion-analysis/focal_stacking/Evaluation.ipynb Cell 7\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/Evaluation.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m criterion \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mMSELoss()\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/Evaluation.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# create some dummy input and target images\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/Evaluation.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m input1 \u001b[39m=\u001b[39m Image\u001b[39m.\u001b[39;49mopen(\u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39moutput/synthesized\u001b[39;49m\u001b[39m{\u001b[39;49;00m\u001b[39miter\u001b[39;49m\u001b[39m}\u001b[39;49;00m\u001b[39m/FAIS_result.png\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/Evaluation.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m input2 \u001b[39m=\u001b[39m Image\u001b[39m.\u001b[39mopen(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39moutput/synthesized\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39miter\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m/resize_beseline_result.png\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/Evaluation.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m target \u001b[39m=\u001b[39m Image\u001b[39m.\u001b[39mopen(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39moutput/synthesized\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39miter\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m/synthesized\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39miter\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39mgt.png\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/.conda/envs/inv_analysis/lib/python3.9/site-packages/PIL/Image.py:2953\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   2950\u001b[0m     filename \u001b[39m=\u001b[39m fp\n\u001b[1;32m   2952\u001b[0m \u001b[39mif\u001b[39;00m filename:\n\u001b[0;32m-> 2953\u001b[0m     fp \u001b[39m=\u001b[39m builtins\u001b[39m.\u001b[39;49mopen(filename, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m   2954\u001b[0m     exclusive_fp \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m   2956\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'output/synthesized<built-in function iter>/FAIS_result.png'"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "from PIL import Image\n",
     "from torchvision.transforms import ToTensor\n",
     "\n",
     "# create a criterion that measures MSE loss\n",
     "criterion = nn.MSELoss()\n",
     "\n",
     "# create some dummy input and target images\n",
-    "input1 = torchvision.io.read_image(f'output/synthesized{iter}/FAIS_result.png')\n",
-    "input2 = torchvision.io.read_image(f'output/synthesized{iter}/resize_beseline_result.png')\n",
-    "target = torchvision.io.read_image(f'output/synthesized{iter}/synthesized{iter}gt.png')\n",
+    "input1 = Image.open(f'output/synthesized{iter}/FAIS_result.png')\n",
+    "input2 = Image.open(f'output/synthesized{iter}/resize_beseline_result.png')\n",
+    "target = Image.open(f'output/synthesized{iter}/synthesized{iter}gt.png')\n",
+    "\n",
+    "input1 = ToTensor()(input1)\n",
+    "input2 = ToTensor()(input2)\n",
+    "target = ToTensor()(target)\n",
     "\n",
     "# print input and target types\n",
     "input1, input2, target = input1.float(), input2.float(), target.float()\n",
@@ -498,6 +503,57 @@
     "print(\"Higher is better (PSNR)\")\n",
     "print(\"our method: \", psnr1.item())\n",
     "print(\"Base line: \", psnr2.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lower is better (MSE)\n",
+      "our method:  597.814453125\n",
+      "software:  878.7437133789062\n",
+      "Higher is better (PSNR)\n",
+      "our method:  20.365140914916992\n",
+      "software:  18.692180633544922\n"
+     ]
+    }
+   ],
+   "source": [
+    "## custom image paths\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torchvision\n",
+    "from torchvision.transforms import ToTensor\n",
+    "import numpy as np\n",
+    "\n",
+    "# create a criterion that measures MSE loss\n",
+    "criterion = nn.MSELoss()\n",
+    "## override iter\n",
+    "# iter = 1\n",
+    "# create some dummy input and target images\n",
+    "input1 = torchvision.io.read_image(f'output/synthesized{iter}/FAIS_result.png')\n",
+    "input2 = torchvision.io.read_image(f'output/Zerene_Stacker/Zerene_PMax.jpg')\n",
+    "target = torchvision.io.read_image(f'output/synthesized{iter}/synthesized{iter}gt.png')\n",
+    "\n",
+    "# print input and target types\n",
+    "input1, input2, target = input1.float(), input2.float(), target.float()\n",
+    "# compute the MSE loss\n",
+    "mse1 = criterion(input1, target)\n",
+    "psnr1 = 10 * np.log10(255**2 / mse1)\n",
+    "mse2 = criterion(input2, target)\n",
+    "psnr2 = 10 * np.log10(255**2 / mse2)\n",
+    "print(\"Lower is better (MSE)\")\n",
+    "print(\"our method: \", mse1.item())\n",
+    "print(\"software: \", mse2.item())\n",
+    "print(\"Higher is better (PSNR)\")\n",
+    "print(\"our method: \", psnr1.item())\n",
+    "print(\"software: \", psnr2.item())"
    ]
   }
  ],
