--- a/FAIS.ipynb
+++ b/FAIS.ipynb
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,14 +822,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress: [------------------> ] 99 % || Epoch [300/300], loss=0.0003. Sharpness Loss: -0.0340. Similarity Loss: 0.0003\r"
+      "Progress: [->                  ] 11 % || Epoch [35/300], loss=0.0007. Sharpness Loss: -0.0158. Similarity Loss: 0.0007\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/nasseraa/inversion-analysis/focal_stacking/FAIS.ipynb Cell 13\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/FAIS.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=55'>56</a>\u001b[0m \u001b[39m# scheduler.step()\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/FAIS.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=56'>57</a>\u001b[0m \u001b[39m# Print the loss for this epoch\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/FAIS.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=58'>59</a>\u001b[0m \u001b[39mif\u001b[39;00m sharpness:\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/FAIS.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=59'>60</a>\u001b[0m     extra_text \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mEpoch [\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m], loss=\u001b[39m\u001b[39m{:.4f}\u001b[39;00m\u001b[39m. Sharpness Loss: \u001b[39m\u001b[39m{:.4f}\u001b[39;00m\u001b[39m. Similarity Loss: \u001b[39m\u001b[39m{:.4f}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(epoch\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m, num_epochs, loss\u001b[39m.\u001b[39;49mitem(), f_loss\u001b[39m.\u001b[39mitem(), s_loss\u001b[39m.\u001b[39mitem() )\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/FAIS.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=60'>61</a>\u001b[0m     results\u001b[39m.\u001b[39mappend((epoch, output, loss, f_loss, s_loss, [alpha, beta]))\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bvscode.ibex.kaust.edu.sa/home/nasseraa/inversion-analysis/focal_stacking/FAIS.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=61'>62</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
