--- a/FAIS-OpticalFLow-v2.ipynb
+++ b/FAIS-OpticalFLow-v2.ipynb
@@ -14,11 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# All imports required are here\n",
@@ -46,17 +42,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "device:  cuda\n"
+      "device:  cpu\n"
      ]
     }
    ],
@@ -65,7 +57,7 @@
     "base_path = f'/home/nasseraa/inversion-analysis/focal_stacking/input'\n",
     "folder_counter = f'{base_path}/{input_to_use}'\n",
     "output_folder = f'output/{input_to_use}'\n",
-    "detect_misaligned_flag = True\n",
+    "detect_misaligned_flag = False\n",
     "resize_factor = 7\n",
     "\n",
     "align_images_flag = False\n",
@@ -90,11 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mean = [0.5, 0.5, 0.5]\n",
@@ -382,11 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def detect_misaligned_pixels_v2(image_array, masks, threshold=1.0):\n",
@@ -425,11 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -484,11 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -676,11 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class MultiAutoencoder(nn.Module):\n",
@@ -725,11 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# test new laplacian filter\n",
@@ -756,11 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -854,11 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1006,11 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1020,6 +976,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
